--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,13 @@
 #card-row{
     display: flex;
 }
+
+.footer{
+    background-color: grey;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
